--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -284,6 +284,47 @@ jobs:
           # and make sure to specify the submodule by setting "--directory=(submodule_name)".
           # Several patches may be added per submodule.
           # Adding comments (#) may be useful to easily tell the individual patches apart.
+           # The lines below add the customizations listed using the CustomizationSelect script
+          # The "\" is a continuation character 
+          #   the line following a "\" should not be blank
+          /bin/bash -c "$(curl -fsSL \
+          https://raw.githubusercontent.com/loopandlearn/lnl-scripts/main/CustomizationSelect.sh)" \
+          dexcom_upload_readings \
+          future_carbs_4h \
+          high_carb_limit \
+          override_sens \
+          watch_title \
+          meal_week \
+          profiles \
+          basal_lock \
+          live_activity \
+          negative_insulin \
+          remote_window
+
+          # the final customization listed above CANNOT have a continuation character
+          # more customizations can be pasted after this line
+          
+          export SCRIPT_BRANCH=prelim_ai_food && export PATCH_BRANCH=prelim_ai_food && /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/loopandlearn/lnl-scripts/$SCRIPT_BRANCH/CustomizationSelect.sh)" food_search
+          
+          echo "Downloading code to support 15 Minute Remote Passwords"
+          cd Loop
+          git remote add gestrich https://github.com/gestrich/Loop 
+          git fetch gestrich bugfix/2024-08-expired-command-10-19-24
+          git cherry-pick fetch_head;
+          cd ..
+          cd LoopKit
+          git remote add gestrich https://github.com/gestrich/LoopKit
+          git fetch gestrich bugfix/2024-08-expired-command-10-19-24
+          git cherry-pick fetch_head;
+          cd ..
+          cd NightscoutService
+          git remote add gestrich https://github.com/gestrich/NightscoutService
+          git fetch gestrich bugfix/2024-08-expired-command-10-19-24
+          git cherry-pick fetch_head;
+          cd ..
+          git add .; 
+          git commit -m "Added 15 minute remote password patches"
+
 
       # Patch Fastlane Match to not print tables
       - name: Patch Match Tables
